syntax = "proto3";
package exomonad.effects.teams;

// Teams task management effects for Gemini agents participating in Claude Code Teams.
//
// These effects read/write the same filesystem structures that Claude's native
// TaskCreate/TaskUpdate/TaskList tools use (~/.claude/tasks/{team}/).

// ============================================================================
// Shared types
// ============================================================================

// Task status matching Claude Teams protocol.
enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_COMPLETED = 3;
}

// Full task info as stored in {id}.json files.
message TaskInfo {
  string id = 1;
  string subject = 2;
  string description = 3;
  string active_form = 4;
  TaskStatus status = 5;
  repeated string blocks = 6;
  repeated string blocked_by = 7;
  string owner = 8;
}

// ============================================================================
// ClaimTask - Self-assign a pending, unblocked task
// ============================================================================

message ClaimTaskRequest {
  // Task ID to claim.
  string task_id = 1;
}

message ClaimTaskResponse {
  // Whether the claim succeeded.
  bool success = 1;
  // The claimed task (populated on success).
  TaskInfo task = 2;
  // Error message (populated on failure).
  string error = 3;
}

// ============================================================================
// CompleteTask - Mark a task as completed with summary
// ============================================================================

message CompleteTaskRequest {
  // Task ID to complete.
  string task_id = 1;
  // Completion summary.
  string summary = 2;
}

message CompleteTaskResponse {
  bool success = 1;
  TaskInfo task = 2;
  string error = 3;
}

// ============================================================================
// ListTasks - Read all tasks with status/owner/blockedBy
// ============================================================================

message ListTasksRequest {
  // No parameters â€” reads all tasks from the team's tasks directory.
}

message ListTasksResponse {
  repeated TaskInfo tasks = 1;
}

// ============================================================================
// GetTask - Read a single task's full details
// ============================================================================

message GetTaskRequest {
  string task_id = 1;
}

message GetTaskResponse {
  TaskInfo task = 1;
}

// ============================================================================
// ReportStatus - Non-blocking status update to TL
// ============================================================================

message ReportStatusRequest {
  // Status update content (plain text).
  string content = 1;
}

message ReportStatusResponse {
  bool ack = 1;
}

// ============================================================================
// AskQuestion - Blocking question to TL/human
// ============================================================================

message AskQuestionRequest {
  // Question content (plain text).
  string question = 1;
}

message AskQuestionResponse {
  // The TL's answer.
  string answer = 1;
}

// ============================================================================
// Service definition
// ============================================================================

service TeamsEffects {
  rpc ClaimTask(ClaimTaskRequest) returns (ClaimTaskResponse);
  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc ReportStatus(ReportStatusRequest) returns (ReportStatusResponse);
  rpc AskQuestion(AskQuestionRequest) returns (AskQuestionResponse);
}
